# ltree

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish_test.yml  tests.yml
list_tree/: cli.py  config.py  core.py  exporters.py  schema.py  utils.py
ltree/: __init__.py  _cli.py  cli.py  config.py  constants.py  core.py  utils.py
ltree-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
ltree-vscode/src/: extension.ts
ltree/_core/: scanner.py  utils.py
ltree/_renderers/: renderer.py  rich_renderer.py
ltree/app/: __init__.py  logging.py  tree.py
ltree/cli/: __init__.py  config_builder.py  main.py  parser.py  validators.py
ltree/cli/commands/: config.py  theme.py  tree.py
ltree/common/: format.py
ltree/config/: config.py
ltree/core/: __init__.py  config.py  models.py  scanner.py  utils.py
ltree/core/filters/: __init__.py  base.py  depth.py  folders.py  pipeline.py  sorting.py
ltree/core/metadata/: __init__.py  base.py  basic.py  code.py  filesystem.py  git.py  models.py  project.py  registry.py  time.py
ltree/metadata/: __init__.py  base.py  models.py  registry.py
ltree/renderers/: __init__.py  base.py  exporters.py  graphviz.py  html.py  json.py  markdown.py  md_block.py  models.py  registry.py  renderer.py  rich.py  rich_renderer.py  row_builder.py  text.py  utils.py  yaml.py
ltree/rendering/: __init__.py  base.py  models.py  registry.py  utils.py
ltree/serialization/: __init__.py  base.py  tree.py  types.py
ltree/serializers/: __init__.py  base.py  tree.py  types.py
ltree/themes/: __init__.py  base.py  emoji.py  icons.py  manager.py  nerd.py  none.py  vscode_icons.py
ltree/tree/: __init__.py  models.py
tests/: test_cli.py  test_config.py  test_core.py  test_exporters.py  test_icons.py  test_metadata_basic.py  test_rich_renderer.py  test_utils.py  test_version.py
tests/test_app/: __init__.py  test_logging.py  test_tree.py
tests/test_cli/: test_app_cli.py  test_command_config.py  test_command_theme.py  test_command_tree.py  test_config_builder.py  test_main.py  test_parser.py  test_validators.py
tests/test_config/: test_config.py
tests/test_core/: test_config.py  test_models.py  test_utils.py
tests/test_filters/: test_filters.py
tests/test_legacy/: __init__.py  test_legacy_cli.py  test_legacy_metadata_basic.py  test_legacy_renderers.py  test_legacy_rich_renderer.py  test_legacy_scanner.py  test_legacy_utils.py
tests/test_metadata/: __init__.py  test_code.py  test_filesystem.py  test_git.py  test_metadata_basic.py  test_project.py  test_registry.py  test_time.py
tests/test_renderers/: __init__.py  conftest.py  test_block.py  test_exporters.py  test_graphviz.py  test_html.py  test_json.py  test_markdown.py  test_registry.py  test_renderers.py  test_rich.py  test_rich_renderer.py  test_row_builder.py  test_text.py  test_utils.py  test_yaml.py
tests/test_rendering/: __init__.py  conftest.py  test_format.py  test_registry.py  test_row_builder.py  test_utils.py
tests/test_scanners/: __init__.py  test_aggregate.py  test_filters.py  test_scanner.py  test_sorting.py  test_subtree.py  test_traversal.py
tests/test_serialization/: __init__.py  test_tree.py
tests/test_serializers/: __init__.py  test_tree.py
tests/test_themes/: __init__.py  test_icons.py
tests/test_tree/: test_models.py
(+55 files in other folders)
