[project]
name = "list-tree-tool"
version = "0.1.0"
description = "A customizable tree-like directory viewer with filtering, depth control, and statistics"
keywords = ["tree", "cli", "filesystem", "directory"]
authors = [{name = "Yu-Hao Yeh"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
list-tree = "list_tree.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
