[project]
name = "list-tree-tool"
version = "0.1.0"
description = "A customizable tree-like directory viewer with filtering, depth control, and statistics"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["tree", "cli", "filesystem", "directory"]
authors = [
    {name = "Yu-Hao Yeh"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = []


[project.scripts]
list-tree = "list_tree.cli:main"


[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["list_tree*"]


[tool.setuptools]
include-package-data = true
